# drone-PYlot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  drone_terminal_simulator.py  package.xml  setup.cfg  setup.py
.github/workflows/: ci_actions.yml  pylint.yml
PID_Controller_Test/: create_pid_project.sh  main.py  main2.py  top_5_pid_results.csv
PID_Controller_Test/bluerov2_hull_tracker/control/: pid_controller.py  pid_sweeper.py
PID_Controller_Test/bluerov2_hull_tracker/dynamics/: bluerov_model.py  marine_dynamics.py
PID_Controller_Test/bluerov2_hull_tracker/environment/: hull_profiles.py
PID_Controller_Test/bluerov2_hull_tracker/utils/: performance_metrics.py
PID_Controller_Test/bluerov2_hull_tracker/visualization/: gui.py  plotter.py  terminal_simulator.py
aruco_det/: ost.txt  ost.yaml
aruco_det/aruco_det/: CMakeLists.txt  README.md  package.xml
aruco_det/aruco_det/launch/: aruco_det.launch.py
aruco_det/aruco_det/src/: aruco_det.cpp
aruco_det/config/: camera.yaml
aruco_det/launch/: aruco_det.launch.py
drone-pylot-control/: package.xml  setup.cfg  setup.py
drone-pylot-control/drone-pylot-control/: ctrl.py  imu_check.py  stream.py
drone-pylot-middleman/: package.xml  setup.cfg  setup.py
drone-pylot-middleman/drone-pylot-middleman/: middleman.py
drone-pylot-middleman/resource/: ost.txt  ost.yaml
drone-pylot-middleman/test/: test_middleman.py
drone-pylot-msgs/: CMakeLists.txt  package.xml
drone-pylot-msgs/msg/: TelloMove.msg  TelloRotate.msg  TelloStatus.msg
launch/: tello_sim.launch.py
simulation/tello_ros_ws/src/aruco_det/: CMakeLists.txt
simulation/tello_ros_ws/src/aruco_det/src/: aruco_det.cpp  mirror_correction_node.cpp
src/: IMU_receiver.py  aruco_trajectory_estimator.py  drone_terminal_simulator.py  fsm.py  main.py
src/IMU/: platformio.ini
src/IMU/src/: main.cpp
src/UGV/: UGV.py  controller.py  input_reader.py  serial_interface.py
tello_ros/drone_pylot/: .pre-commit-config.yaml
tello_ros/drone_pylot/test/: test_aruco_trajectory.py
tello_ros/tello_description/urdf/: tello.xml
tello_ros/tello_driver/: CMakeLists.txt
test/: test_aruco_trajectory.py
utils/VIO/: EKFVOIMU.py  EKF_test.py  imu_check.py  old.py  pyr_lucas_kanade.py  rejection.py  requirements.txt  tello_vio.py  test_frames.py  vio_new.py  vio_new_test.py  vio_test.py
utils/VIO/test-imgs/: GroundTruth.csv
velocity-control/: aruco_tracker.py  drone_controller.py  main.py  track.py
(+7 files in other folders)
